--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <aside class="card">
         <div class="text-center">
             <div class="foto">
-            <img src="adin.JPG" alt="foto" width="400px">
+            <img src="adin.jpg" alt="foto" width="400px">
         </div>
         <div class="konten">
             <ul>
