--- a/portofolio.html
+++ b/portofolio.html
@@ -27,12 +27,12 @@
             <h2 align="center">P o r t o f o l i o :</h2>
         </div>
         <div class="portofolio">
-            <b>Merancang Jaringan MAN (Metropolitan Area Network)</b>
+            <b>Merancang Jaringan MAN (Metropolitan Area Network)</b><br>
             <img src="cisco.jpg" alt="foto" width="700px" height="400px">            
         </div>
             <hr>
             <div class="portofolio">
-            <b>Merancang Jaringan Wide Area Network</b>
+            <b>Merancang Jaringan Wide Area Network</b><br>
             <img src="ciscoo.jpg" alt="foto" width="700px" height="400px">
             <br>
             <img src="ciscoooo.jpg" alt="foto" width="700px" height="400px">>
